<resources>
    <string name="app_name">Parking</string>
    <string name="num">1번</string>
    <string name="cartype">차종입력</string>
    <string name="carnum">차번입력</string>
    <string name="incar">입차</string>
    <string name="outcar">출차</string>
    <string name="inner_cartype">차종류: </string>
    <string name="inner_carnum">차번호: </string>
    <string name="inner_incarTime">입차시간: </string>
    <string name="select">선택</string>
</resources>
